@@ -94,13 +94,14 @@ foreach my $f (</var/log/postgresql/postgresql-$version-$cluster.log.[1-9]*>) {
     unlink ($f =~ /(.*)/); # untaint
 }
 # remove stats_temp_directory
-if ($info{statstempdir}) {
-    my $statsowner = (stat($info{statstempdir}))[4];
+my $statstempdir = $info{config}->{stats_temp_directory};
+if ($statstempdir) {
+    my $statsowner = (stat($statstempdir))[4];
     if (defined $statsowner and $statsowner == $info{owneruid}) {
-        foreach my $f (<$info{statstempdir}/*.stat>) {
+        foreach my $f (<$statstempdir/*.stat>) {
             unlink ($f =~ /(.*)/); # untaint
         }
-        rmdir $info{statstempdir};
+        rmdir $statstempdir;
     }
 }
 
